test-suite/tests/snapshots/cli_klx_tests__klx0002_invalid_integer_literal.snap
---
source: test-suite/tests/cli_klx_tests.rs
expression: result.stderr
---
KLX9001

  × unknown lexing error: parse int error: number too large to fit in target type
   ╭─[./tmp/cli_test_klx0002_invalid_integer_literal/pkg/schema/lib.ks:5:20]
 1 │ namespace pkg;
 2 │ 
 3 │ namespace types {
 4 │     enum TooBig {
 5 │         Overflow = 99999999999999999999999999
   ·                    ─────────────┬────────────
   ·                                 ╰── unknown lexing error: parse int error: number too large to fit in target type
 6 │     };
 7 │ };
   ╰────
